# ProbabilisticNN

./: .gitignore  LICENCE  README.md  pyproject.toml  tox.ini
benchmarks/: benchmarking.ipynb  inference_bemchmarks.py
examples/: basic_usage.ipynb
requirements-testing/: latest.txt  py312-min.txt  py313-min.txt  py314-min.txt
src/: __init__.py
src/base/: __init__.py  kernels.py  optim.py  types.py  utils.py
src/common/: __init__.py  pattern_layer.py
src/grnn/: __init__.py  grnn.py  summation_layer.py
src/numba/: kernels.py
src/numba_backend/: __init__.py  kernels.py
src/numba_backend/inference/: grnn.py
src/pnn/: __init__.py  layers.py  pnn.py
src/probabilisticnn/: __init__.py
src/probabilisticnn/base/: __init__.py  kernels.py  loss.py  optim.py  types.py  utils.py
src/probabilisticnn/common/: __init__.py  pattern_layer.py
src/probabilisticnn/grnn/: __init__.py  grnn.py  layers.py
src/probabilisticnn/numba_backend/: __init__.py  kernels.py
src/probabilisticnn/numba_backend/inference/: __init__.py  grnn.py  pnn.py
src/probabilisticnn/pnn/: __init__.py  layers.py  pnn.py
tests/: test_grnn.py  test_kernels.py  test_layers.py  test_numba_backend.py  test_optim.py  test_pnn.py
