[project]
name = "ProbabilisticNN"
version = "0.0.1"
description = "Python package for Probabilistic Neural Networks and General Regression Neural Networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0; python_version == '3.12'",
    "numpy>=2.1.0; python_version == '3.13'",
    "numpy>=2.3.3; python_version >= '3.14'",
    "scipy>=1.11.2; python_version == '3.12'",
    "scipy>=1.14.1; python_version == '3.13'",
    "scipy>=1.17.0; python_version >= '3.14'",
    "scikit-learn>=1.6.1; python_version < '3.14'",
    "scikit-learn>=1.8.0; python_version >= '3.14'",
]
license = "MIT"
authors = [
  {name = "Grigorii Vinogradov", email = "vinogradov.gr.s@gmail.com"},
]
keywords = [
    "PNN",
    "GRNN",
    "Probabilistic Neural Network",
    "General Regression Neural Network",
    "Machine Learning",
    "Adaptive PNN",
    "Adaptive GRNN",
    "Kernels"
]

[project.optional-dependencies]
numba = [
    "numba>=0.59.0; python_version == '3.12'",
    "numba>=0.61.0; python_version == '3.13'",
    "numba>=0.63.0; python_version >= '3.14'",
]
dev = [
    "pytest>=6",
    "numba>=0.59.0; python_version == '3.12'",
    "numba>=0.61.0; python_version == '3.13'",
    "numba>=0.63.0; python_version >= '3.14'",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
